# Sanruum

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .treeignore  CMakeCache.txt  README.md  alembic.ini  commit-config.yaml  custom_types.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml  stale.yml
data/: faq.json  intents.json  label_map.json  responses.json  test_text.txt
sanruum/: __init__.py  ai_system.py  app.py  config.py  constants.py  faq_handler.py  intent_handler.py  main.py
sanruum/ai_core/: __init__.py  ai_config.py  config.py  memory.py  persistent_memory.py  processor.py  response.py
sanruum/ai_core/protocols/: base.py  health.py  media.py  nutrition.py  prediction,py.py
sanruum/ai_core/protocols/knowledge/: lab.py  treatment.py
sanruum/ai_core/protocols/user/: exercise.py  mood.py  wearable.py
sanruum/ai_core/speech/: __init__.py  diarization.py  language_detection.py  speech_config.py  speech_recognition.py  text_to_speech.py
sanruum/app/: routes.py
sanruum/config/: __init__.py  app.py  base.py  database.py  environment.py  project.py
sanruum/database/: db.py  models.py  repository.py
sanruum/database/core/: __init__.py  base.py  db.py
sanruum/database/managers/: user_manager.py
sanruum/database/migrations/: env.py
sanruum/database/models/: __init__.py  audit.py  consent.py  disease.py  doctor_visit.py  health_media.py  health_record.py  medical_history.py  medication.py  nutrition.py  profile.py  treatment.py  user.py  wearable_data.py
sanruum/database/models/audit/: __init__.py  audit.py
sanruum/database/models/consent/: __init__.py  consent.py
sanruum/database/models/core/: __init__.py  admin_user.py  profile.py  tokens.py  user.py
sanruum/database/models/health/: __init__.py  disease.py  doctor_visit.py  health_record.py  lab_tests.py  medical_history.py  medication.py  mood_log.py  nutrition.py  treatment.py  wearable_data.py
sanruum/database/models/media/: __init__.py  health_media.py
sanruum/intent_system/: intent_handler.py
sanruum/models/: disease.py  health_media.py  health_record.py  lab_tests.py  mood_log.py  nutrition.py  profile.py  treatment.py  user.py
sanruum/monitor/: __init__.py  monitor.py
sanruum/nlp/: data_loader.py  dataset_creator.py  train_model.py
sanruum/nlp/utils/: __init__.py  preprocessing.py
sanruum/users/: repository.py
sanruum/utils/: __init__.py  audio_utils.py  display_utils.py  entertainment_tools.py  file_tools.py  logger.py  misc_tools.py  ml_tools.py  nlp_tools.py  personality.py  protocols.py  security_tools.py  time_utils.py  user_manager.py  voice.py  web_search.py
sanruum/utils/base/: audio_utils.py  base_tools.py  display_utils.py  logger.py
sanruum/utils/entertainment/: entertainment_tools.py  social_tools.py
sanruum/utils/health/: emergency_tools.py  fitness_tools.py  food_tools.py
sanruum/utils/health/chronic/diabetes/: diabetes_tools.py
sanruum/utils/health_tools/: diabetes_tools.py  fitness_tools.py  glucose_monitor_tools.py  hydration_tools.py  medication_tools.py  tools.py  wellness_tools.py
sanruum/utils/iot/: iot_tools.py
sanruum/utils/productivity/: productivity_tools.py
sanruum/utils/web/: web_search.py
scripts/: add_filename.py  check_project.py  generate_tree.py  update_readme_project_info.py
tests/: __init__.py
tests/ai_core/: __init__.py  diarization_test.py  language_detection_test.py  memory_test.py  persistent_memory_test.py  processor_test.py  response_test.py  speech_config_test.py  speech_recognition_test.py  text_to_speech_test.py
tests/monitor/: __init__.py  monitor_test.py
tests/nlp/: __init__.py  data_loader_test.py  dataset_creator_test.py  preprocessing_test.py  train_model_test.py
tests/scripts/: generate_tree_test.py
tests/utils/: __init__.py  audio_utils_test.py  time_utils_test.py
tests/utils/base/: logger_test.py
tests/utils/health_tools/: blood_sugar_tools_test.py  hydration_tools_test.py
typings/: langdetect.pyi
